# pytetris

./: .gitignore  README.md  leaders.txt  pyproject.toml
pytetris/: tetrimino_displays.py  tetris.py
pytetris/logic/: gen_logic.py  loc_tetrimino.py  scores.py  tetriminos.py  tetris_game.py  tetris_state.py  tetris_stats.py
pytetris/sound/: background_music.py
pytetris/views/: tetris_board_view.py  tetris_leader_board.py  tetris_preview.py  view.py
tests/logic/: test_tetris_state.py
